fix pwd wraping

--- a/src/styles/tabs.module.css
+++ b/src/styles/tabs.module.css
@@ -14,7 +14,6 @@
   padding: 8px;
   background-color: #f4f4f5;
   margin-bottom: 2rem;
-  max-heigth: 30px;
 }
 
 .tabs-background {
